--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/cardviews/cardviews.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/cardviews/cardviews.component.html
@@ -22,28 +22,29 @@
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
       <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla">Id_Backup</th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Id_Card
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.id_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'id_card')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.id_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'id_card')">
             <option value="-1" *ngIf="cardviewService.CadViewsGralBackup.length > 0">Todas</option>
             <option *ngFor="let cardview of cardviewService.CadViewsGralBackup" [value]="cardview.id_card">{{cardview.id_card}}</option>
           </select>
           <button type="button" [ngClass]="(cardviewService.filtersSearch.id_card.isFilter) ? 'close': 'btnFilter-disabled'" (click)="cardviewService.resetValuefiltroSearch('id_card')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Name
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.id_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'id_card')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.id_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'id_card')">
             <option value="-1" *ngIf="cardviewService.CadViewsGralBackup.length > 0">Todas</option>
             <option *ngFor="let cardview of cardviewService.CadViewsGralBackup" [value]="cardview.id_card">{{cardview.name}}</option>
           </select>
           <button type="button" [ngClass]="(cardviewService.filtersSearch.id_card.isFilter) ? 'close': 'btnFilter-disabled'" (click)="cardviewService.resetValuefiltroSearch('id_card')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">Period</th>
@@ -51,14 +52,14 @@
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Show_Card
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.show_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'show_card')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="cardviewService.filtersSearch.show_card.value" name="id_card" (ngModelChange)="cardviewService.actionFilterEvent($event, 'show_card')">
             <option value="-1">Ambos</option>
             <option value="0">0</option>
             <option value="1">1</option>
           </select>
           <button type="button" [ngClass]="(cardviewService.filtersSearch.show_card.isFilter) ? 'close': 'btnFilter-disabled'" (click)="cardviewService.resetValuefiltroSearch('show_card')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">Number</th>
@@ -68,6 +69,7 @@
     <tr *ngFor="let cardView of cardviewService.Cardviews; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{cardView.repeated}}</td>
+      <td class="Celdas-Tabla">{{cardView.id_backup}}</td>
       <td class="Celdas-Tabla">{{cardView.id_card}}</td>
       <td class="Celdas-Tabla">{{cardView.name}}</td>
       <td class="Celdas-Tabla">{{cardView.period}}</td>
@@ -96,6 +98,7 @@
     <tr *ngFor="let cardView of cardviewService.cardviewsFilter; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{cardView.repeated}}</td>
+      <td class="Celdas-Tabla">{{cardView.id_backup}}</td>
       <td class="Celdas-Tabla">{{cardView.id_card}}</td>
       <td class="Celdas-Tabla">{{cardView.name}}</td>
       <td class="Celdas-Tabla">{{cardView.period}}</td>
