--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
@@ -22,37 +22,37 @@
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
       <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
-
+      <th scope="col" class="Encabezado-Tabla">Id_Backup</th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Id_Account
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="movementsService.actionFilterEvent($event, 'indexAccount')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="movementsService.actionFilterEvent($event, 'indexAccount')">
             <option value="-1" *ngIf="movementsService.AccountsBackup.length > 0">Todas</option>
             <option *ngFor="let account of movementsService.AccountsBackup; let i = index" [value]="i">{{account.id_account}}</option>
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('indexAccount')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Account
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="movementsService.actionFilterEvent($event, 'indexAccount')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="movementsService.actionFilterEvent($event, 'indexAccount')">
             <option value="-1" *ngIf="movementsService.AccountsBackup.length > 0">Todas</option>
             <option *ngFor="let account of movementsService.AccountsBackup; let i = index" [value]="i">{{account.name}}</option>
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('indexAccount')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Id_Category
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
 
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1"><!-- Listar todas categorias de todas la cuentas -->
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1">
               <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
                 <option value="0">Todas</option>
                 <ng-container *ngFor="let account of movementsService.AccountsBackup">
@@ -72,7 +72,7 @@
               </ng-container>
             </ng-container>
 
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1"><!-- Listar todas categorias de la cuenta seleccionada -->
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1">
               <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
                 <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
                 <option *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.id_category}}</option>
@@ -91,15 +91,15 @@
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('id_category')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Category
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
 
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1"><!-- Listar todas categorias de todas la cuentas -->
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1">
               <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
                 <option value="0">Todas</option>
                 <ng-container *ngFor="let account of movementsService.AccountsBackup">
@@ -119,7 +119,7 @@
               </ng-container>
             </ng-container>
 
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1"><!-- Listar todas categorias de la cuenta seleccionada -->
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1">
               <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
                 <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
                 <option *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
@@ -138,51 +138,49 @@
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('id_category')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Amount
-          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.amount.value" name="amount" (keyup)="movementsService.actionFilterEvent($event, 'amount', true)">
+          <!--input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.amount.value" name="amount" (keyup)="movementsService.actionFilterEvent($event, 'amount', true)">
           <button type="button" [ngClass]="(movementsService.filtersSearch.amount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('amount')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Sign
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.sign.value" name="sign" (ngModelChange)="movementsService.actionFilterEvent($event, 'sign')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.sign.value" name="sign" (ngModelChange)="movementsService.actionFilterEvent($event, 'sign')">
             <option value="-1">Ambos</option>
             <option value="-">-</option>
             <option value="+">+</option>
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.sign.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('sign')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Detail
-          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.detail.value" name="detail" (keyup)="movementsService.actionFilterEvent($event, 'detail', true)">
+          <!--input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.detail.value" name="detail" (keyup)="movementsService.actionFilterEvent($event, 'detail', true)">
           <button type="button" [ngClass]="(movementsService.filtersSearch.detail.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('detail')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Date_record
 
-          <input type="text" [owlDateTimeTrigger]="dateR" [owlDateTime]="dateR" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.date_record.value" name="date_record" (ngModelChange)="movementsService.actionFilterEvent($event, 'date_record')">
+          <!--input type="text" [owlDateTimeTrigger]="dateR" [owlDateTime]="dateR" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.date_record.value" name="date_record" (ngModelChange)="movementsService.actionFilterEvent($event, 'date_record')">
           <owl-date-time #dateR [pickerType]="'calendar'"></owl-date-time>
-
-          <!--input type="date" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.date_record.value" name="date_record" (ngModelChange)="movementsService.actionFilterEvent($event, 'date_record')"-->
           <button type="button" [ngClass]="(movementsService.filtersSearch.date_record.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('date_record')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">Time_record</th>
@@ -203,6 +201,7 @@
     <tr *ngFor="let movement of movementsService.Movements; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
+      <td class="Celdas-Tabla">{{movement.id_backup}}</td>
       <td class="Celdas-Tabla">{{movement.id_account}}</td>
       <td class="Celdas-Tabla">{{movement.nameAccount}}</td>
       <td class="Celdas-Tabla">{{movement.id_category}}</td>
@@ -245,6 +244,7 @@
     <tr *ngFor="let movement of movementsService.movementsFilter; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
+      <td class="Celdas-Tabla">{{movement.id_backup}}</td>
       <td class="Celdas-Tabla">{{movement.id_account}}</td>
       <td class="Celdas-Tabla">{{movement.nameAccount}}</td>
       <td class="Celdas-Tabla">{{movement.id_category}}</td>
