--- a/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.html
@@ -16,7 +16,6 @@
           <option *ngFor="let a of backups;" value="{{a.id_backup}}">{{a.id_backup}}</option>
         </select>
       </div>
-
     </div>
   </div>
   <div class="col-2">
@@ -34,7 +33,7 @@
 </div>
 <div>
 
-  <div style="display: block">
+  <div style="display: block; padding-left: 5px; padding-right: 5px">
 
     <div class="row">
       <div class="col-9">
@@ -47,14 +46,14 @@
         </canvas>
       </div>
       <div class="col-3">
-        <table class="table table-sm table-hover" style="font-size: small">
+        <table class="table table-sm table-hover" style="font-size: small" *ngIf="TotalbarChartLabels.length > 0">
           <thead class="thead-dark">
 
           <th class="text-center"  style="width: 70%; padding-left: 30%;">
             Año: {{TotalbarChartLabels}}
           </th>
           <th class="text-center" style="width: 30%">
-            <button class="btn btn-outline-info btn-sm">
+            <button class="btn btn-outline-info btn-sm" (click)="exportPDF()">
             <span>
                 <fa-icon [icon]="util.faFileExport"></fa-icon>
               </span>
@@ -65,25 +64,26 @@
           </thead>
           <thead>
           <tr>
-            <th scope="col">Variables</th>
-            <th scope="col">Total</th>
+            <th scope="col" class="col-4">Variables</th>
+            <th scope="col" class="col-8">Total</th>
           </tr>
           </thead>
           <tbody>
           <tr>
-            <td class="color-var-ingresos">Ingresos</td>
-            <td>{{TotalbarChartData[1].data[0] | currency: '$':'symbol':'1.2-6'}}</td>
+            <td class="color-var-ingresos col-4">Ingresos</td>
+            <td class="col-8">{{TotalbarChartData[1].data[0] | currency: '$':'symbol': util.symbolDecimalNumber6Digits}}</td>
           </tr>
           <tr class="mb-2">
-            <td class="color-var-gastos">Gastos</td>
-            <td class="border-b">{{TotalbarChartData[0].data[0] | currency: '$':'symbol':'1.2-6'}}</td>
+            <td class="color-var-gastos col-4">Gastos</td>
+            <td class="border-b col-8">{{TotalbarChartData[0].data[0] | currency: '$': util.symbolDecimalNumber6Digits}}</td>
           </tr>
           <tr>
-            <td>Diferencia</td>
-            <td>{{diferencia() | currency: '$':'symbol':'1.2-6'}}</td>
+            <td class="col-4">Diferencia</td>
+            <td class="col-8">{{diferencia() | currency: '$':'symbol': util.symbolDecimalNumber6Digits}}</td>
           </tr>
           </tbody>
         </table>
+
       </div>
     </div>
   </div>
