--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
@@ -22,34 +22,35 @@
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
       <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla">Id_Backup</th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Id_Account
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
             <option value="-1" *ngIf="categoriesService.AccountsBackup.length > 0">Todas</option>
             <option *ngFor="let account of categoriesService.AccountsBackup; let i = index" [value]="i">{{account.id_account}}</option>
           </select>
           <button type="button" [ngClass]="(categoriesService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('indexAccount')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Account
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
             <option value="-1" *ngIf="categoriesService.AccountsBackup.length > 0">Todas</option>
             <option *ngFor="let account of categoriesService.AccountsBackup; let i = index" [value]="i">{{account.name}}</option>
           </select>
           <button type="button" [ngClass]="(categoriesService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('indexAccount')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Id_Category
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
             <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) == -1">
               <option value="0">Todas</option>
               <ng-container *ngFor="let account of categoriesService.AccountsBackup">
@@ -63,13 +64,13 @@
           </select>
           <button type="button" [ngClass]="(categoriesService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('id_category')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Name
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
             <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) == -1">
               <option value="0">Todas</option>
               <ng-container *ngFor="let account of categoriesService.AccountsBackup">
@@ -83,20 +84,20 @@
           </select>
           <button type="button" [ngClass]="(categoriesService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('id_category')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
           Sign
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.sign.value" name="sign" (ngModelChange)="categoriesService.actionFilterEvent($event, 'sign')">
+          <!--select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.sign.value" name="sign" (ngModelChange)="categoriesService.actionFilterEvent($event, 'sign')">
             <option value="-1">Ambos</option>
             <option value="-">-</option>
             <option value="+">+</option>
           </select>
           <button type="button" [ngClass]="(categoriesService.filtersSearch.sign.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('sign')">
             <span aria-hidden="true">&times;</span>
-          </button>
+          </button-->
         </div>
       </th>
       <th scope="col" class="Encabezado-Tabla">Icon_Name</th>
@@ -107,6 +108,7 @@
     <tr *ngFor="let category of categoriesService.Categories; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
+      <td class="Celdas-Tabla">{{category.id_backup}}</td>
       <td class="Celdas-Tabla">{{category.id_account}}</td>
       <td class="Celdas-Tabla">{{category.nameAccount}}</td>
       <td class="Celdas-Tabla">{{category.id_category}}</td>
@@ -136,6 +138,7 @@
     <tr *ngFor="let category of categoriesService.categoriesFilter; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
+      <td class="Celdas-Tabla">{{category.id_backup}}</td>
       <td class="Celdas-Tabla">{{category.id_account}}</td>
       <td class="Celdas-Tabla">{{category.nameAccount}}</td>
       <td class="Celdas-Tabla">{{category.id_category}}</td>
